<resources>
    <string name="app_name" translatable="false">RAM interpreter</string>
    <string name="label">Label</string>
    <string name="command">Command</string>
    <string name="address">Address</string>
    <string name="comment">Comment</string>
    <string name="register">Register %d</string>
    <string name="input">Input (1, 2,…)</string>
    <string name="next_line">Next line</string>
    <string name="output">Output</string>
    <string name="exception_halt_missing">Command \"%s\" is missing</string>
    <string name="exception_label_empty">Labels cannot be empty, at line: %d</string>
    <string name="exception_label_multiple">You cannot have more than one label, at line: %d</string>
    <string name="exception_label_spelling">Label \"%s\" does not exist, at line: %d</string>
    <string name="exception_command_empty">Commands cannot be empty, at line: %d</string>
    <string name="exception_command_multiple">You cannot have more than one command, at line: %d</string>
    <string name="exception_command_spelling">Command \"%s\" does not exist, at line: %d</string>
    <string name="exception_address_empty">Addresses cannot be empty, at line: %d</string>
    <string name="exception_address_multiple">You cannot have more than one address, at line: %d</string>
    <string name="exception_address_spelling">Address \"%s\" cannot be there, at line: %d</string>
    <string name="commands_list_empty">Commands list cannot be empty!</string>
    <string name="file_saved">File saved</string>
    <string name="choose_a_file">Choose a file</string>
    <string name="caution">Caution!</string>
    <string name="discard_changes">Do you want to discard all changes?</string>
    <string name="permission_explanation">Without this permission you will not be able to save files or open existing.</string>
    <string name="parsing_error">Parsing error!</string>
    <string name="error">Error!</string>
    <string name="leave_unsaved">Do you want to leave without saving?</string>
    <string name="not_formatted">The code could not be formatted.</string>
    <string name="output_format">Output format</string>
    <string name="output_format_help">Format registers: tab=2:5, a=5.</string>
    <string name="choose_a_directory">Choose a directory</string>
    <string name="ok" translatable="false">OK</string>
    <string name="cancel">Cancel</string>
    <string name="filename">Filename</string>
    <string name="override_warning">Do you want to override %s file?</string>
    <string name="description_read">Command READ reads an input value.</string>
    <string name="description_load">Command LOAD copies a value from pointed register to the register 0.</string>
    <string name="description_write">Command WRITE adds a value to the output.</string>
    <string name="description_jump">Command JUMP sets next executed line to the pointed by an address.</string>
    <string name="description_jzero">Command JZERO sets next executed line to the pointed by an address only if the value of register 0 is equal to 0.</string>
    <string name="description_jgtz">Command JGTZ sets next executed line to the pointed by an address only if the value of register 0 is grater than 0.</string>
    <string name="description_sub">Command SUB subtracts a value from the register 0.</string>
    <string name="description_add">Command ADD adds a given value to the register 0.</string>
    <string name="description_mult">Command MULT multiplies a value from register 0 by a given value.</string>
    <string name="description_div">Command DIV divides a value from register 0 by a given value.</string>
    <string name="description_halt">Command HALT stops execution.</string>
    <string name="description_store">Command STORE copies a value from the register 0 to the pointed register.</string>
    <string name="example_read"><![CDATA[<br>Examples:<br>READ 1<br>READ *1]]></string>
    <string name="example_load"><![CDATA[<br>Examples:<br>LOAD =1<br>LOAD 1<br>LOAD *1]]></string>
    <string name="example_write"><![CDATA[<br>Examples:<br>WRITE =1<br>WRITE 1<br>WRITE *1]]></string>
    <string name="example_jump"><![CDATA[<br>Example:<br>JUMP address]]></string>
    <string name="example_jzero"><![CDATA[<br>Example:<br>JZERO address]]></string>
    <string name="example_jgtz"><![CDATA[<br>Example:<br>JGTZ address]]></string>
    <string name="example_sub"><![CDATA[<br>Examples:<br>SUB =1<br>SUB 1<br>SUB *1]]></string>
    <string name="example_add"><![CDATA[<br>Examples:<br>ADD =1<br>ADD 1<br>ADD *1]]></string>
    <string name="example_mult"><![CDATA[<br>Examples:<br>MULT =1<br>MULT 1<br>MULT *1]]></string>
    <string name="example_div"><![CDATA[<br>Examples:<br>DIV =1<br>DIV 1<br>DIV *1]]></string>
    <string name="example_halt"><![CDATA[<br>Example:<br>HALT]]></string>
    <string name="example_store"><![CDATA[<br>Examples:<br>STORE 1<br>STORE *1]]></string>
</resources>
