<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp">

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/label"
            android:textSize="16sp"
            app:layout_constraintHorizontal_weight="0.1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/command"
            app:layout_constraintTop_toTopOf="parent"/>

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/command"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/command"
            android:textSize="16sp"
            app:layout_constraintHorizontal_weight="0.2"
            app:layout_constraintStart_toEndOf="@id/label"
            app:layout_constraintEnd_toStartOf="@id/address"
            app:layout_constraintTop_toTopOf="parent"/>

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/address"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/address"
            android:textSize="16sp"
            app:layout_constraintHorizontal_weight="0.12"
            app:layout_constraintStart_toEndOf="@id/command"
            app:layout_constraintEnd_toStartOf="@id/comment"
            app:layout_constraintTop_toTopOf="parent"/>

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/comment"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/comment"
            android:textSize="16sp"
            app:layout_constraintHorizontal_weight="0.4"
            app:layout_constraintStart_toEndOf="@id/address"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

    </android.support.constraint.ConstraintLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/commandsList"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/header"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:itemCount="1"
        tools:listitem="@layout/commands_list_item_view" />

</android.support.constraint.ConstraintLayout>